--- a/locadoradelivros/package.json
+++ b/locadoradelivros/package.json
@@ -13,21 +13,22 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "axios": "^1.2.1",
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.2.1",
+    "chart.js": "^4.4.3",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "vite-plugin-checker": "^0.7.1",
-    "eslint-config-prettier": "^8.1.0",
-    "prettier": "^2.5.1",
     "@quasar/app-vite": "^1.9.0",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.5.1",
+    "vite-plugin-checker": "^0.7.1"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
